Fix mobile logo spacing Fix bottom spacing on content

--- a/src/scss/layout/_mods.scss
+++ b/src/scss/layout/_mods.scss
@@ -166,9 +166,12 @@
     max-width: 80px;
     margin: 0 auto;
   }
+  .hero-browser{
+    margin-top: 42px;
+  }
 
   .site-header {
-    padding: 0;
+    padding: 40px 0 0 0;
   }
 
 }
